Add CORS config, refactor